--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
+    "multer": "^1.4.2",
     "mysql": "github:mysqljs/mysql",
     "mysql2": "^2.2.5"
   }
