--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "apollo-boost": "^0.3.1",
+    "apollo-boost": "^0.4.1",
     "cra-template": "1.0.3",
     "graphql": "^14.1.1",
     "react": "^16.13.1",
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
     "build": "npm run build:css && react-scripts build && cp -fr ./build/* ../server/public",
-    "test": "react-scripts test",
+    "test": "react-scripts test --silent --env=jest-environment-jsdom-sixteen",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
     "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
@@ -36,7 +36,13 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/dom": "^7.24.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.0.4",
+    "@testing-library/user-event": "^12.1.7",
     "autoprefixer": "^9.0.0",
+    "history": "^5.0.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "postcss-cli": "^8.0.0",
     "tailwindcss": "^1.8.10"
   }
